objects/ssot__CarePgmProvHealthcareProvider__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareProgramProviderId__c</fullName>
        <label>Care Program Provider</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFrom__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveTo__c</fullName>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareProviderId__c</fullName>
        <label>Healthcare Provider</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Pgm Prov Healthcare Provider Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimaryProvider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726236660_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePgmProvHealthcareProvider_Health_rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>CarePgmProvHealthcareProvider_Health_rel</relationshipLabel>
        <relationshipName>rel_1716726236660_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726581665_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePgmProvHealthcareProvider_CarePr_rel</label>
        <referenceTo>ssot__CareProgramProviderProduct__dlm</referenceTo>
        <relationshipLabel>CarePgmProvHealthcareProvider_CarePr_rel</relationshipLabel>
        <relationshipName>rel_1716726581665_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>